docs/cilium/examples_and_labs/01_getting_started/03_demo_time/sw_l3-l4_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule1"
spec:
  description: "L3-L4 policy to restrict deathstar access to empire ships only"
  endpointSelector:
    matchLabels:
      org: empire
      class: deathstar
  ingress:
  - fromEndpoints:
    - matchLabels:
        org: empire
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP

# Or, more specifically, to restrict deathstar access to tiefighters only:
# ---
# apiVersion: "cilium.io/v2"
# kind: CiliumNetworkPolicy
# metadata:
#   name: "rule1"
# spec:
#   endpointSelector:
#     matchLabels:
#       org: empire
#       class: deathstar
#   ingress:
#   - fromEndpoints:
#     - matchLabels:
#         org: empire
#         class: tiefighter
#     toPorts:
#     - ports:
#       - port: "80"
#         protocol: TCP
